--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-awesome-stars-rating": "^0.15.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-parallax": "^3.5.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.18.0",
     "sort-by": "^1.2.0",
@@ -35,5 +36,6 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.5",
     "vite": "^4.4.5"
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
